# text-resolver

./: .dvcignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .ruff.toml  Makefile  Miniconda3-latest-Linux-x86_64.sh.REMOVED.git-id  README.md  captcha_gen.py  data.dvc  docker-compose.yaml  dvc.md  environment.yaml  environment.yml  pyproject.toml  requirements.txt  requirements_no_version.txt  setup.bat  setup.py  setup.sh  start.bat
.dvc/: config
.github/: CODEOWNERS  CONTRIBUTING.md  dependabot.yml  labeler.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: BUG-REPORT.yml  DOCUMENTATION.yml  EXPERIMENT.yml  FEATURE-REQUEST.yml  bug-report.yml  ci-sev.md  config.yml  disable-ci-jobs.md  documentation.yml  feature-request.yml  pt2-bug-report.yml
.github/templates/: common.yml.j2  linux_binary_build_workflow.yml.j2  macos_binary_build_workflow.yml.j2  upload.yml.j2  windows_binary_build_workflow.yml.j2
.github/workflows/: action_demo.yml  auto-labeler.yml  autoyapf.yml  build.yml  build_image.yml  build_package.yml  code-quality-check.yaml  code-quality-check.yml  code-quality-main.yaml  code-quality-master.yaml  code-quality-pr.yaml  create_github_release.yml  create_pull_request.yml  deploy_docs.yml  gpt-code-review.yml  latex.yml  merge_pull_request.yml  poetry.yml  pr_title.yml  pre-commit-autoupdate.yml  pre-commit-updater.yml  pre-commit.yml  pull-request-pipeline.yml  python-package-conda.yml  release-drafter.yml  release_drafter.yml  ruff.yml  test.yml
configs/: eval.yaml  train.yaml
configs/callbacks/: early_stopping.yaml  model_checkpoint.yaml
configs/data/: captcha.yaml
configs/experiment/: md1.yaml  md2.yaml  md3.yaml  md4.yaml  md5.yaml  md6.yaml
configs/logger/: csv.yaml
configs/model/: captcha.yaml  mnist.yaml
configs/trainer/: default.yaml
data/: README.md
docker/: Dockerfile
docker/mirror/: config.toml  pip.conf
notebooks/: data.ipynb  data_generator.ipynb  visualize_after_trainning.ipynb
scripts/: captcha_gen.py
src/: eval.py  train.py
src/data/: captcha_datamodule.py  mnist_datamodule.py
src/data/components/: bar_example_1.py  bar_example_2.py  build_dataset.py
src/datamodules/: mnist_datamodule.py
src/datamodules/components/: parse_data.py
src/models/: captcha_module.py  mnist_module.py
src/models/components/: cnn.py  cnn_v2.py  loss_fn.py  resnet.py  rnn.py  simple_dense_net.py  swin.py  transformer.py  unet.py
src/utils/: get_visualize.py  image_encoder.py  instantiators.py  logging_utils.py  pylogger.py  rich_utils.py  utils.py
tests/: conftest.py  test_configs.py  test_datamodule.py  test_datamodules.py  test_eval.py  test_sweeps.py  test_train.py
tests/helpers/: run_if.py  run_sh_command.py
